# tellingtree

./: .env.example  .env.production.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 0b47a72a4b89_add_token_version_to_users.py  0c7b2710106b_nullable_tree_id_on_notifications.py  113728a9ca98_add_soft_delete_to_persons_and_stories.py  12c0fc3bb79c_widen_person_string_columns_for_gedcom_.py  14ca056e3ca2_add_user_avatar_path.py  344790b50dc4_add_preferences_jsonb_to_users.py  4406df5b773f_add_places_table.py  4882c20a9f87_add_password_reset_tokens.py  4b41ae573323_add_refresh_sessions.py  4d4de387b5d8_add_last_active_at_to_users.py  55876b9a0490_add_audit_logs_and_tree_invites_tables.py  58c9504a7c0a_add_flexible_date_fields.py  6c852fe80623_add_user_approval_and_superadmin.py  770e69f89169_add_icon_to_trees.py  (+11 more)
app/: config.py  main.py
app/db/: base.py  (+1 more)
client/: __init__.py  _base.py  auth.py  client.py  imports.py  media.py  persons.py  places.py  relationships.py  stories.py  tags.py  trees.py  users.py
dev/: api-spec.md  architecture.md  audit-report.md  data-model.html  data-model.md  decisions.md
frontend/: Caddyfile  Dockerfile.frontend  index.html  package-lock.json  package.json
tests/: conftest.py  test_account_lockout.py  test_auth.py  test_client.py  test_gedcom.py  test_invite_approval.py  test_person_fields.py  test_persons.py  test_places.py  test_refresh_rotation.py  test_relationships.py  test_stories.py  test_trees.py
(+148 files in other folders)
